additional explanations, still more to go, look for highlighting

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -3210,7 +3210,7 @@ snp_mean_distance = lapply(1:22, function(x){diff(markers %>% filter(chrom == x)
 
 ```
 
-With the adaptation of the selection and neutrality tests into genome-wide usage, specifically the sliding window approach, there was the need to balance the number of segregating sites with the window size [@Pybus2014]. This balance is entirely influenced by \gls{snp} density with whole genome sequence data offering 78 million bi-allelic \glspl{snp} in the 1000 Genomes Project Phase 3. However, the CoreExome \gls{snp} array data had lower density, with a mean of one \gls{snp} per `r snp_mean_density` bases. This means that window size needs to increase for \gls{snp} array data in order to have the same number of segregating sites. However, as window size increases it also reduces the resolution of the genome and with it the ability to associate a window with particular genomic features.
+With the adaptation of the selection and neutrality tests into genome-wide usage, specifically the sliding window approach, there was the need to balance the number of segregating sites with the window size [@Pybus2014]. This balance is entirely influenced by \gls{snp} density with whole genome sequence data offering 78 million bi-allelic \glspl{snp} in the 1000 Genomes Project Phase 3. However, the CoreExome \gls{snp} array data had lower density, with a mean of one \gls{snp} per `r snp_mean_distance` bases. This means that window size needs to increase for \gls{snp} array data in order to have the same number of segregating sites. However, as window size increases it also reduces the resolution of the genome and with it the ability to associate a window with particular genomic features.
 
 There was also a higher likelihood of a longer gene being reported as significant due to more windows overlapping the genic region. Not only that, but the window size meant that \glspl{snp} not in the window might not be near the actual window, that is, -45 and +45 kb away from the edge of the defined window in the worst case. This would lead to some difficulty in definitive location. The flip side to this was that it allows for upstream and downstream effects of a \gls{snp} to be incorporated. There was a trade off between \gls{snp} density and window size. There were `r NROW(markers) %>% formatC(., format = 'f', big.mark = ',', digits = 0)` bi-allelic \gls{snp} markers used in this analysis from the CoreExome \gls{snp} array. This was less than the other projects such as the HapMap project, and considerably less than the sequence data that the 1000 Genomes Project used. The marker density may have been able to be improved though the imputation of the missing markers using a haplotype reference panel. Ideally this analysis would have had a higher marker density, however it was decided that it was best to remain unimputed due to both the haplotype uncertainty at the phasing step, and the Polynesian populations not being represented in the haplotype reference panel used for phasing and imputation. An example of why having Polynesian haplotypes represented is important, is the finding of @Minster2016, where the variant (rs373863828) had no appreciable allele frequency outside of Polynesia. Implications from the marker density used are the number of \glspl{snp} per window was lower than in other studies and specifically when looking at the degradation of haplotypes there is the possibility for early truncation due to lack of data.
 
@@ -3235,7 +3235,7 @@ One of the limitations of using the \gls{gwas} catalog to create gene lists for 
 
 The results of this study show there is indeed evidence indicative of selection in urate-associated loci in the Polynesian populations. This evidence however is not specific to urate. This is shown by the fact that there is little signal of selection appearing at the urate transporters themselves, but at the loci that are part of more general pathways. The reasons for why there would be selection still remain unclear but response to pathogenic challenge such as malaria is a potential mechanism.
 
-XXX expand with some of the important results - what is the take home message from this work?
+\hl{XXX expand with some of the important results - what is the take home message from this work?}
 
 <!-- #### possibly useful papers -->
 
