--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -32,7 +32,7 @@ key tasks to complete:
 - genes in the tails
 -->
 
-The previous chapter investigated regions of the genome in Polynesian populations that displayed 'signatures of selection', this chapter investigates the hypothesis that populations with shared ancestry will display similar signals of selection. To test this, I will be clustering the various selection statistics and then comparing the clusters to current population migratory history.
+The previous chapter investigated regions of the genome in Polynesian populations that displayed 'signatures of selection', this chapter investigates the hypothesis that populations with shared ancestry will display similar signals of selection. To test this, I will be clustering the various selection statistics and then comparing the clusters to current population migratory history. This chapter contains data that could be thought of as a precursor to chapter \@ref{selectionResults}, however it incorporates the results from that chapter \@ref{selectionResults} and so has been presented after.
 
 ## Introduction {#chap4Intro}
 
@@ -122,7 +122,7 @@ For all \glspl{snp}, \gls{ihs} and \gls{nsl} were calculated and normalised usin
 
 ### Pathway enrichment analysis
 
-Pathway enrichment analysis was performed by taking genes that intersected the clustered \gls{ihs} and \gls{nsl} regions, inputting them into Enrichr^[http://amp.pharm.mssm.edu/Enrichr/ accessed 26 February 2018] [@Chen2013b; @Kuleshov2016] and exporting the KEGG 2016 pathway table.
+Pathway enrichment analysis was performed by taking genes that intersected the clustered \gls{ihs} and \gls{nsl} regions, inputting them into Enrichr^[http://amp.pharm.mssm.edu/Enrichr/ accessed 26 February 2018] [@Chen2013b; @Kuleshov2016] and exporting the KEGG 2016 pathway table. This differs from the pathway analysis in chapter \@ref{selectionResults} in that it was performed on genes from clustered regions of significant \gls{ihs} or \gls{nsl} \glspl{snp}, rather than just the locus a \gls{snp} was from.
 
 
 
@@ -402,12 +402,14 @@ bind_rows(list(
   group_rows("Fu and Li's F", 1, 8) %>% 
   group_rows("Fay and Wu's H", 9, 16) %>% 
   group_rows("Tajima's D", 17, 24) %>%
-  group_rows( "Zeng's E",25, 32) %>% 
+  group_rows( "Zeng's E",25, 32) 
    #%>% kableExtra::group_rows("Fu and Li's D", 1, 7) %>% kableExtra::group_rows("Fu and Li's F", 8, 14) %>% kableExtra::group_rows("Fay and Wu's H", 15, 21) %>% kableExtra::group_rows("Tajima's D", 22, 28) %>% kableExtra::group_rows("Zeng's E", 29, 35) 
 ```
 
 
-There were differing numbers of windows used for each population, ranging from a minimum of `r create_windowTable() %>% summarise(min(min))` to a maximum of `r create_windowTable() %>% summarise(max(max))`. The mean number of windows per population was `r create_windowTable() %>% summarise(round(mean(mean), digits = 1))` (SD `r create_windowTable() %>% summarise(round(sd(mean), digits = 1))`). Table \@ref(tab:proportion) and Table \@ref(tab:exclusivity) show the proportion and exclusivity of the clusters respectively, for the clustering of populations by cutting the dendrograms to create six groups, based on the number of super populations. Clustering based on the windows of the extreme tails of the selection statistic distributions resulted in a higher number of the individual populations being clustered into their super populations than for the chromosome-wide selection statistics, and the clusters were also more exclusive to the super populations. This shows that the aggregate frequency spectrum based selection and neutrality statistics don't capture the population differentiation, but that the extremes for each population do replicate the grouping that population differentiation had with F~ST~.
+There were differing numbers of windows used for each population, ranging from a minimum of `r create_windowTable() %>% summarise(min(min))` to a maximum of `r create_windowTable() %>% summarise(max(max))`. The mean number of windows per population was `r create_windowTable() %>% summarise(round(mean(mean), digits = 1))` (SD `r create_windowTable() %>% summarise(round(sd(mean), digits = 1))`) and was due to multiple windows having the same value. Table \@ref(tab:proportion) and Table \@ref(tab:exclusivity) show the proportion and exclusivity of the clusters respectively, for the clustering of populations by cutting the dendrograms to create six groups, based on the number of super populations. Proportions were calculated independently for each super population based on the cluster group with the maximum number of populations from a particular super population, whereas, exclusivity of each cluster was calculated by using the proportions of populations from a given super population assigned compared to the total number of individual populations to assigned that cluster. Clustering based on the windows of the extreme tails of the selection statistic distributions resulted in a higher number of the individual populations being clustered into their super populations than for the chromosome-wide selection statistics, and the clusters were also more exclusive to the super populations. This shows that the aggregate frequency spectrum based selection and neutrality statistics don't capture the population differentiation, but that the extremes for each population do replicate the grouping that population differentiation had with F~ST~.
+
+The following subsections will cover the distributions for the the frequency based statistics calculated genome-wide in windows to highlight that populations within a super popuation had similar distributions, but between super populations there were diferences. For each statistic there will also be a description of the clustering that was done on the 1^st^ and 99^th^ percentiles, and make note of any of the metabolic disease associated loci from chapter \@ref{selectionResults} that met the selection thresholds that were found in windows from the distribution extremes. There is a subtle difference between the windows that were deemed of interest in chapter \@ref{selectionResults}, and the windows in the extremes of the distributions, in that the latter does not have the greater or less than zero condition. Each statistic also represents different 'partitions' of the frequency spectrum with \gls{td} representing low versus intermediate frequency variants, \gls{flf} representing singletons versus intermediate frequency variants, \gls{fwh} representing intermediate versus high frequency derived variants, and \gls{ze} representing low verseus high frequency variants.
 
 
 ```{r tailwindowSummary, echo = FALSE}
@@ -455,7 +457,7 @@ refer to figure
 
 ##### Tajima's _D_ distributions {#tdDist}
 
-The distributions of the genome-wide \gls{td} values showed that there were differences between each population, and super population (Figure \@ref(fig:tdDensity) and Table \@ref(tab:superGlobalSummaryTD)). The \gls{td} means for the Polynesian populations were the smallest of the super populations at `r global_super_summary %>% filter(super_pop == 'POL', stat == 'Tajima.D') %>% .[["mean"]] %>% three_dp()` (SD `r global_super_summary %>% filter(super_pop == 'POL', stat == 'Tajima.D') %>% .[["sd"]] %>% three_dp()`) with `r gs_td_table %>% filter(pop == 'CIM') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'CIM') %>% .[["sd"]] %>% three_dp()`) for \gls{cim}, `r gs_td_table %>% filter(pop == 'NZM') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'NZM') %>% .[["sd"]] %>% three_dp()`) for \gls{nzm}, `r gs_td_table %>% filter(pop == 'SAM') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'SAM') %>% .[["sd"]] %>% three_dp()`) for \gls{sam}, and `r gs_td_table %>% filter(pop == 'TON') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'TON') %>% .[["sd"]] %>% three_dp()`) for \gls{ton} (Table \@ref(tab:gsTdTable)). The means of the Polynesian populations were lower than all of the other populations except \gls{pel} and \gls{mxl}, indicating that overall the Polynesian populations had a higher proportion of low frequency to intermediate frequency variants. The \gls{sas} populations had the highest mean \gls{td} overall at `r global_super_summary %>% filter(super_pop == 'SAS', stat == 'Tajima.D') %>% .[["mean"]] %>% three_dp()` (SD `r global_super_summary %>% filter(super_pop == 'SAS', stat == 'Tajima.D') %>% .[["sd"]] %>% three_dp()`). The \gls{afr} populations were the only populations with the 1^st^ percentile above zero, but also had the smallest overall maximum value of `r global_super_summary %>% filter(super_pop == 'AFR', stat == 'Tajima.D') %>% .[["max"]] %>% three_dp()`. The \gls{eur} populations had the highest maximum \gls{td} value at `r global_super_summary %>% filter(super_pop == 'EUR', stat == 'Tajima.D') %>% .[["max"]] %>% three_dp()`. The smallest \gls{td} value of `r gs_td_table %>% filter(min(min) == min) %>% .[['min']] %>% three_dp()` came from the \gls{khv} population of the \gls{eas} super population. The \gls{afr} population had the smallest range (`r td_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['range']] %>% three_dp()`), whereas the \gls{eas} super population had the largest (`r td_super_pop_means %>% filter(super_pop == 'EAS') %>% .[['range']] %>% three_dp()`). The \gls{pol} population had the second largest (`r td_super_pop_means %>% filter(super_pop == 'POL') %>% .[['range']] %>% three_dp()`). A right shifted distribution of \gls{td} can be attributed to ascertainment bias from using a \gls{snp} array, where there is a bias against low frequency markers.
+The distributions of the genome-wide \gls{td} values showed that there were differences between each population, and super population (Figure \@ref(fig:tdDensity) and Table \@ref(tab:superGlobalSummaryTD)). The \gls{td} means for the Polynesian populations were the smallest of the super populations at `r global_super_summary %>% filter(super_pop == 'POL', stat == 'Tajima.D') %>% .[["mean"]] %>% three_dp()` (SD `r global_super_summary %>% filter(super_pop == 'POL', stat == 'Tajima.D') %>% .[["sd"]] %>% three_dp()`) with `r gs_td_table %>% filter(pop == 'CIM') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'CIM') %>% .[["sd"]] %>% three_dp()`) for \gls{cim}, `r gs_td_table %>% filter(pop == 'NZM') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'NZM') %>% .[["sd"]] %>% three_dp()`) for \gls{nzm}, `r gs_td_table %>% filter(pop == 'SAM') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'SAM') %>% .[["sd"]] %>% three_dp()`) for \gls{sam}, and `r gs_td_table %>% filter(pop == 'TON') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'TON') %>% .[["sd"]] %>% three_dp()`) for \gls{ton} (Table \@ref(tab:gsTdTable)). The means of the Polynesian populations were lower than all of the other populations except \gls{pel} and \gls{mxl}, indicating that overall the Polynesian populations had a higher proportion of low frequency to intermediate frequency variants. The \gls{sas} populations had the highest mean \gls{td} overall at `r global_super_summary %>% filter(super_pop == 'SAS', stat == 'Tajima.D') %>% .[["mean"]] %>% three_dp()` (SD `r global_super_summary %>% filter(super_pop == 'SAS', stat == 'Tajima.D') %>% .[["sd"]] %>% three_dp()`). The \gls{afr} populations were the only populations with the 1^st^ percentile above zero, but also had the smallest overall maximum value of `r global_super_summary %>% filter(super_pop == 'AFR', stat == 'Tajima.D') %>% .[["max"]] %>% three_dp()`. The \gls{eur} populations had the highest maximum \gls{td} value at `r global_super_summary %>% filter(super_pop == 'EUR', stat == 'Tajima.D') %>% .[["max"]] %>% three_dp()`. The smallest \gls{td} value of `r gs_td_table %>% filter(min(min) == min) %>% .[['min']] %>% three_dp()` came from the \gls{khv} population of the \gls{eas} super population. The \gls{afr} population had the smallest range (`r td_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['range']] %>% three_dp()`), whereas the \gls{eas} super population had the largest (`r td_super_pop_means %>% filter(super_pop == 'EAS') %>% .[['range']] %>% three_dp()`). The \gls{pol} population had the second largest (`r td_super_pop_means %>% filter(super_pop == 'POL') %>% .[['range']] %>% three_dp()`). The distribution for \gls{td} should normally centre on zero, however, a right shifted distribution of \gls{td}, such as all distributions in Figure \@ref(fig:tdDensity), can be attributed to ascertainment bias from using a \gls{snp} array, where there is a bias against low frequency markers.
 
 ```{r}
 global_super_summary %>%filter(stat == "Tajima.D") %>% select(-stat) %>% kable(., caption ='(\\#tab:superGlobalSummaryTD) Summary statistics for \\gls{td} by super population.', digits = 3, booktabs =TRUE, escape = FALSE, col.names = c("Super Population", "Mean","SD","Min","1st Percentile","Median","99th Percentile","Max"), format = 'latex', linesep = "") %>% kableExtra::kable_styling(latex_options = 'scale_down')
@@ -589,7 +591,7 @@ create_sums('td_pos') %>% filter(POL_SAM + POL_TON == ALLsum & ALLsum == 2) %>% 
 (td_pos_pol_genes <- create_sums('td_pos') %>% filter(POLsum == 4 ) %>% left_join(., lower_sig_stats %>% mutate(chrom = as.numeric(chrom)) %>% select(contains('chrom'), SYMBOL) %>% distinct(), by = c('chrom', 'chrom_start', 'chrom_end')) %>% group_by(SYMBOL) %>% tally())
 ```
 
-##### Metabolic disease-associated genes
+##### Metabolic disease-associated genes in the extremes of Tajima's _D_
 
 <!-- > not sure how best to represent the genes listed in this section and the equivalent ones for other stats -->
 ```{r}
@@ -713,7 +715,7 @@ In the upper tail of the \gls{fwh} distribution, the clustering assigned all of 
 The 1^st^ percentile has many of the regions in the Polynesian populations in common with the \gls{eas} populations (Figure \@ref(fig:fwhTop1000)). Whereas, in the 99^th^ percentile there were more regions that were only from the Polynesian populations that were not in common with any other populations. This shows that the regions with high frequency derived alleles are in common with the \gls{eas} populations, indicating they possibly originated prior to the Polynesian migration.
 
 
-##### Metabolic disease-associated genes
+##### Metabolic disease-associated genes in the extremes of Fay and Wu's _H_
 
 ```{r}
 fwh_met <- list()
@@ -839,7 +841,7 @@ flf_no_pol_genes <- txdb_gene_annotate(create_sums('flf_pos') %>% filter(POLsum 
 Clustering on the windows from the upper tail put the super populations into their own groups, but also split the \gls{amr} populations into two separate groups. The Polynesian populations were also clustered into an East/West split of 2 separate exclusive clusters. Exclusivity of clusters was high with five of the six clusters being exclusive to a single super population, however one cluster contained half of the \gls{amr} populations (\gls{clm} and \gls{pur}) and all of the \gls{eur} and \gls{sas} populations. There were a total of `r create_windowSummaryTable() %>% filter(stat == 'flf_pos') %>% .[['total_windows']] %>% formatC(., big.mark = ',')` windows with `r create_sums('flf_pos') %>% filter(POLsum == ALLsum & ALLsum > 0) %>% select(contains('chrom'), contains('sum')) %>% NROW(.)` windows specific to Polynesian populations. This compared to `r create_sums('flf_pos') %>% filter(AFRsum == ALLsum & ALLsum > 0) %>% select(contains('chrom'), contains('sum')) %>% NROW(.)` windows for \gls{afr}, `r create_sums('flf_pos') %>% filter(AMRsum == ALLsum & ALLsum > 0) %>% select(contains('chrom'), contains('sum')) %>% NROW(.)` windows for \gls{amr}, `r create_sums('flf_pos') %>% filter(EURsum == ALLsum & ALLsum > 0) %>% select(contains('chrom'), contains('sum')) %>% NROW(.)` windows for \gls{eur}, and `r create_sums('flf_pos') %>% filter(EASsum == ALLsum & ALLsum > 0) %>% select(contains('chrom'), contains('sum')) %>% NROW(.)` windows for \gls{eas}. The Eastern Polynesian populations had a total of `r create_sums('flf_pos') %>% filter(POL_CIM + POL_NZM == ALLsum & ALLsum > 0) %>% select(contains('chrom'), contains('sum')) %>% NROW(.)` unique windows with `r create_sums('flf_pos') %>% filter(POL_CIM == ALLsum & ALLsum > 0 ) %>% select(contains('chrom'), contains('sum')) %>% NROW(.)` only from \gls{cim} and `r create_sums('flf_pos') %>% filter(POL_NZM == ALLsum & ALLsum > 0) %>% select(contains('chrom'), contains('sum')) %>% NROW(.)` from \gls{nzm}. From the Western Polynesian populations there were `r create_sums('flf_pos') %>% filter(POL_SAM + POL_TON == ALLsum & ALLsum > 0) %>% select(contains('chrom'), contains('sum')) %>% NROW(.)` specific windows. There were `r create_sums('flf_pos') %>% filter(POL_SAM == ALLsum & ALLsum > 0) %>% select(contains('chrom'), contains('sum')) %>% NROW(.)` specific to \gls{sam} and `r create_sums('flf_pos') %>% filter(POL_TON == ALLsum & ALLsum > 0) %>% select(contains('chrom'), contains('sum')) %>% NROW(.)` specific to \gls{ton}. There were `r flf_pos_pol_genes %>% filter(POLsum == 4, !is.na(SYMBOL)) %>% pull(SYMBOL) %>% unique() %>% length()` genes that overlapped windows in the 99^th^ percentiles of all four Polynesian populations. 
 
 
-##### Metabolic disease associated genes
+##### Metabolic disease associated genes in the extremes of Fu and Li's _F_
 
 There were `r flf_neg_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()` genes that were in the list of genes of metabolic disease associated genes and also had windows in the 1^st^ percentile,that intersected them from the Polynesian populations. Some examples of these genes were _MAFC1_, _DNAH10_ and _SLC2A9_. _MAFC1_ had six windows, some of which were in common with the \gls{amr} and \gls{afr} populations. _DNAH10_ had 18 windows, with about half being in common with the populations of \gls{eur}, \gls{eas}, \gls{sas}, and \gls{amr}. The urate transporter _SLC2A9_ had multiple significant windows in \gls{ton}, \gls{jpt}, and \gls{chb}.
 
@@ -939,7 +941,7 @@ ze_pos_no_pol_genes <- txdb_gene_annotate(create_sums('ze_pos') %>% filter(POLsu
 
 
 <!-- create df from the clustering results to be able to pull numbers out of for number of windows per population for each statistic, and for the proportion of pops being clustered -->
-##### Metabolic associated diseases
+##### Metabolic associated diseases in the extremes of Zeng's _E_
 
 ```{r}
 ze_met <- list()
@@ -956,7 +958,7 @@ ze_met$pos_not_only_pol <-  ze_pos_pol_genes %>% filter( SYMBOL %in% genelists$g
 
 There were `r ze_neg_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()` genes that were in the list of genes of metabolic disease associated genes and also had windows in the 1^st^ percentile, that intersected them from the Polynesian populations. Some examples of these genes are _MACF1_, _AGBL4_, _DACH1_, and _RBMS1_. _MACF1_ had windows that were in the 1^st^ percentile of all populations. _AGBL4_ and _DACH1_ had windows in nearly every population except for most \gls{afr} populations. _RBMS1_ was only in the 1^st^ percentile for the Western Polynesian populations \gls{sam} and \gls{ton}. Windows of the 99^th^ percentile in the Polynesian populations that intersected the metabolic disease associated genes tended to also be found in the populations of \gls{eas}, and many also were in common with all other populations but not many were in common with the \gls{afr} populations. There were `r ze_pos_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()` genes that were in the 99^th^ percentile for Polynesians. Some examples were _CHST8_, _ERBB4_, _FHIT_, _PTPRD_, and _HMGA2_. _CHST8_ had windows that were in the 99^th^ percentile for the four Polynesian populations, as well as the populations of \gls{eas} with a couple of populations of both \gls{sas} and \gls{eur} too. _ERBB4_ had windows that were in both \gls{pol} and \gls{eas} populations. _FHIT_ had windows for the Western Polynesian populations, \gls{sam} and \gls{ton} and most of the populations from \gls{eas} and \gls{sas}. _PTPRD_ had windows from the Eastern Polynesian populations of \gls{cim} and \gls{nzm}, these windows were also in common with populations mostly from \gls{eur}, while some other windows were in common with the Eastern Polynesian populations and \gls{afr}. _HMGA2_ had windows in all of the super populations except \gls{afr}.
 
-
+#### \hl{Summary of clustering on extremes}
 
 \FloatBarrier
  
@@ -1136,7 +1138,7 @@ haplo_markerLoc(gr_ihs[gr_ihs$pop == "POL_NZM"]) %>% full_join(., haplo_markerLo
 haplo_markerLoc(gr_nsl[gr_nsl$pop == "POL_NZM"]) %>% full_join(., haplo_markerLoc(gr_nsl[gr_nsl$pop == "POL_CIM"]),by = 'Effect', suffix = c("_nzm","_cim")) %>% full_join(., haplo_markerLoc(gr_nsl[gr_nsl$pop == "POL_SAM"]),by = 'Effect') %>% full_join(., haplo_markerLoc(gr_nsl[gr_nsl$pop == "POL_TON"]),by = 'Effect', suffix = c("_sam","_ton")) %>% mutate_if(is.numeric, funs(replace_na(., replace = 0))) %>% kable( caption = '(\\#tab:nSLperMarkerLoc) Number of markers by variant annotation type that were in the significant \\gls{nsl} clustered regions for Polynesian populations.', col.names = c("Effect", "NZM","CIM","SAM","TON"), format = 'latex', booktabs = TRUE) %>% kable_styling(latex_options = "scale_down")
 ```
 
- 
+#### \hl{Summary of clustering on haplotypic regions}
  
 #### Metabolic disease associated genes
 
@@ -1530,7 +1532,7 @@ To assess if there was specificity of selection for the metabolic disease gene l
 <!--
 Clustering on other diseases such as pd, macular degeneration, alzhimers and colon cancer revealed similar patters 
 -->
-#### Urate and gout
+#### Clustering of median-centred window values for urate and gout-associated genes
 
 There were `r length(unique(gc_urate_gout_GR$SYMBOL))` loci that had an association with urate or gout at a genome-wide significance level in the \gls{gwas} catalog. This mapped to `r nrow(gout$mat_d$Tajima.D)` windows for each of the frequency based selection test statistics. Tables \@ref(tab:gouttdgeneclus),  \@ref(tab:goutfwhgeneclus),  \@ref(tab:goutflfgeneclus), and \@ref(tab:goutzegeneclus) contain the median centred values for the windows used in the clustering. All statistics (\gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}) grouped most of the super populations correctly and nearly all clusters had good exclusivity for each single super population (Tables \@ref(tab:proportion) and \@ref(tab:exclusivity)). \Gls{td}, \gls{fwh}, and \gls{ze} also had an Eastern/Western Polynesian population sub group within the Polynesian group (Figure \@ref(fig:goutdendros)). Unlike the F~ST~ clustering, the \gls{amr} populations were grouped together for \gls{td}, \gls{fwh}, and \gls{ze}. The \gls{eas} and \gls{pol} populations were closest for \gls{td}, \gls{flf}, \gls{fwh}, and \gls{ze}.
 
@@ -1653,7 +1655,7 @@ multiplot(gene_dendros(gene_data = gout$mat_d$Tajima.D[,-1:-3]) + ggtitle("Tajim
 ```
 
 
-#### Obesity
+#### Clustering of median-centred window values for obesity-associated genes
 
 
 The \gls{gwas} catalog had `r length(unique(obesity_GR$SYMBOL))` loci associated with obesity, this was represented by `r nrow(obesity$mat_d$Tajima.D)` windows and the clustering resulted in the groupings of super populations (Figure \@ref(fig:obesitydendros)). Exclusivity of a single super population to a cluster was also high with the notable exception being the \gls{amr} populations of \gls{clm} and \gls{pur} often being part of the \gls{eur} cluster (Tables \@ref(tab:proportion) and \@ref(tab:exclusivity)). Tables \@ref(tab:obesitytdgeneclus),  \@ref(tab:obesityfwhgeneclus),  \@ref(tab:obesityflfgeneclus), and \@ref(tab:obesityzegeneclus) contain the median centred statistic values for the windows used in the clustering. The Polynesian super population cluster was also closest to \gls{eas} in all selection statistics and also had an Eastern/Western sub-grouping within the \gls{pol} group.
@@ -1714,7 +1716,7 @@ multiplot(gene_dendros(gene_data = obesity$mat_d$Tajima.D[,-1:-3]) + ggtitle("Ta
 
 (ref:obesitydendros) _Obesity Associated Gene Clustering_ Dendrograms created from hierarchical clustering applied to windows from the `r length(unique(obesity_GR$SYMBOL))` loci associated with obesity. Coloured by super population.
 
-#### Type 2 diabetes
+#### Clustering of median-centred window values for type 2 diabetes-associated genes
 
 The \gls{gwas} catalog had `r length(unique(t2d_GR$SYMBOL))` genes associated with \gls{t2d}. These were represented by `r nrow(t2d$mat_d$Tajima.D)` windows and clustering of the \gls{t2d} associated genes grouped the individual populations into their super population groups. For all clustering the \gls{amr} populations were split, with \gls{clm} and \gls{pur} grouped with the \gls{eur} populations for \gls{td}, \gls{fwh}, and \gls{ze} (Figure \@ref(fig:t2ddendros)). Tables \@ref(tab:t2dtdgeneclus),  \@ref(tab:t2dfwhgeneclus),  \@ref(tab:t2dflfgeneclus), and \@ref(tab:t2dzegeneclus) contain the median centred statistic values for the windows used in the clustering. The \gls{pol} populations were assigned two exclusive groups through the cutree method that created an Eastern/Western Polynesian split for \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}. \gls{fwh} and \gls{ze} had a similar pattern to the groupings of the whole chromosome F~ST~ clustering.
 
@@ -1780,7 +1782,7 @@ multiplot(gene_dendros(gene_data = t2d$mat_d$Tajima.D[,-1:-3]) + ggtitle("Tajima
 ```
 
 
-#### Kidney disease
+#### Clustering of median-centred window values for kidney disease-associated genes
 
 (ref:kidneydendros) _Kidney Disease Associated Gene Clustering_ Dendrograms created from hierarchical clustering applied to windows from the `r length(unique(kd_GR$SYMBOL))` loci associated with kidney disease. Coloured by super population.
 
@@ -1842,7 +1844,7 @@ has all stats
 
 
 
-#### Metabolic syndrome
+#### Clustering of median-centred window values for metabolic syndrome-associated genes
 
 (ref:metsyndendros) _Metabolic Syndrome Associated Gene Clustering_ Dendrograms created from hierarchical clustering applied to windows from the `r length(unique(metsyn_GR$SYMBOL))` loci associated with metabolic syndrome. Coloured by super population.
 
@@ -2218,7 +2220,7 @@ poly_complete %>% full_join(., perc_complete %>% select(allcomplete = n, everyth
 
 Other studies have previously shown the relationships between Polynesian and other Pacific populations, most often with mitochondrial DNA and Y chromosome markers [@Kayser2010; @Duggan2014a; @Hudjashov2017; @Hudjashov2018]. Autosomes have also been used to explore Polynesian origins and relationships between Pacific populations, though generally with rather small sample sizes (Largest Polynesian population size: 24 @Kimura2008; 9 @Hudjashov2017; 30 @Hudjashov2018). This study is the first to compare four Polynesian populations, two of East, and two of West Polynesian ancestry, and of similar sample sizes to those of the \glsdesc{1kgp}. The analysis is important because it adds new evidence of the genetic relationship between the Polynesian populations and other populations. This is important, as (in addition to purely academic reasons) understanding the ancestry of populations helps to inform and reduce the stigma of genetic diseases [@Sankar2006], and to inform about the etiology of modern metabolic disease.
 
-In Chapter 3 (section \@ref(selectionDissussion)), it was noted that the populations had population specific-distributions for the frequency spectrum-based selection and neutrality statistics. The tails of the distributions contain the most extreme values and are therefore most likely to be the loci that have undergone selection - specifically the negative tail is of interest for positive selection. It was thought that perhaps the tails could be used to group the individual populations using an unsupervised method - in this case, hierarchical clustering - and reassemble the super populations. The first test used the entire chromosome and created a summary statistic that was used to create clusters. It was successful in re-assembling the super populations using F~ST~ which is a measure of population differentiation, and had previously been used within the \gls{1kgp} dataset to establish how differentiated the \gls{1kgp} samples were from each other [@1KGP2015snp]. The population groupings were also the same as in the \gls{pca} that was used to select the individuals for the selection analysis (Figure \@ref(fig:allpopPCA)). Both the F~ST~ results and PCA (for the subject selection) confirmed the genetic relatedness and differentiation of the Polynesian populations in a global context, as being most similar to the East Asian populations [@Kayser2008a]. It also confirmed that within Polynesia, the differentiation between Eastern and Western Polynesia, consistent with the out of Africa human migration and subsequent Polynesian expansion [@Nielsen2017; @Matisoo-Smith2015; @Skoglund2016; @Hudjashov2018]. 
+In Chapter 3 (section \@ref(selectionDissussion)), it was noted that the populations had population specific-distributions for the frequency spectrum-based selection and neutrality statistics. The tails of the distributions contain the most extreme values and are therefore most likely to be the loci that have undergone selection - specifically the negative tail is of interest for positive selection. It was thought that perhaps the tails could be used to group the individual populations using an unsupervised method - in this case, hierarchical clustering - and reassemble the super populations. The first test used the entire chromosome and created a summary statistic that was used to create clusters. It was successful in re-assembling the super populations using F~ST~ which is a measure of population differentiation, and had previously been used within the \gls{1kgp} dataset to establish how differentiated the \gls{1kgp} samples were from each other [@1KGP2015snp]. The population groupings were also the same as in the \gls{pca} that was used to select the individuals for the selection analysis (Figure \@ref(fig:allpopPCA)). Both the F~ST~ results and PCA (for the subject selection) confirmed the genetic relatedness and differentiation of the Polynesian populations in a global context, as being most similar to the East Asian populations [@Kayser2008a]. It also confirmed that within Polynesia, the differentiation between Eastern and Western Polynesia, was consistent with the out of Africa human migration and subsequent Polynesian expansion [@Nielsen2017; @Matisoo-Smith2015; @Skoglund2016; @Hudjashov2018]. 
 
 #### Clustering of aggregate statistics 
 
@@ -2365,7 +2367,7 @@ The technical limitations of this dataset based on the markers from the CoreExom
 
 <!-- give this a test and might then might be able to "data not shown" -->
 
-The \texttt{cutree} method also required that K clusters be returned regardless of what the tree actually looked like, and K < n. The use of K = 6 was chosen due to there being six super populations, however, \gls{clm}, \gls{pur}, \gls{mxl}, and \gls{pel} being classed as a single super population was not reflected in the clustering of the chromosome-wide F~ST~. Many of the selection tests split \gls{amr} into 2 groups, \gls{clm}/\gls{pur} and \gls{msl}/\gls{pel}. This pairing is consistent with what had previously been found from similarity of admixture and F~ST~ [@Gravel2013; @1KGP2015snp]. These \gls{amr} populations had also been identified as being admixed and so it was interesting that for the upper tail of \gls{flf} they were clustered with the \gls{nzm} population, which is also known to be admixed, mostly with New Zealand European [@Hollis-Moffatt2012; @Gravel2013]. Because these \gls{amr} populations were still included, and the requirement for six clusters, this affected the exclusivity measurement of clusters. The proportion measurement was also affected because sometimes a super population was spread across multiple but exclusive clusters. This was the case for the Polynesian populations and the 99^th^ percentile of \gls{flf} where the Eastern Polynesian populations were an exclusive cluster, and the Western Polynesian populations were an exclusive cluster. This meant more clusters were assigned to Polynesian populations than should have been (under the K = 6 assumption there would be one cluster per super population), and for six clusters to remain, the \gls{sas} populations ended up combined with the \gls{eur} populations, based on the distance and linkage criteria used for the clustering.
+The \texttt{cutree} method also required that K clusters be returned regardless of what the tree actually looked like, and K < n. The use of K = 6 was chosen due to there being six super populations, however, \gls{clm}, \gls{pur}, \gls{mxl}, and \gls{pel} being classed as a single super population was not reflected in the clustering of the chromosome-wide F~ST~. Many of the selection tests split \gls{amr} into 2 groups, \gls{clm}/\gls{pur} and \gls{msl}/\gls{pel}. This pairing is consistent with what had previously been found from similarity of admixture and F~ST~ [@Gravel2013; @1KGP2015snp]. These \gls{amr} populations had also been identified as being admixed and so it was interesting that for the upper tail of \gls{flf} they were clustered with the \gls{nzm} population, which is also known to be admixed, mostly with New Zealand European [@Hollis-Moffatt2012; @Gravel2013]. Because these \gls{amr} populations were still included, and the requirement for six clusters, this affected the exclusivity measurement of clusters. The proportion measurement was also affected because sometimes a super population was spread across multiple but exclusive clusters. An example of this was the Polynesian populations and the 99^th^ percentile of \gls{flf} where the Eastern Polynesian populations were an exclusive cluster, and the Western Polynesian populations were an exclusive cluster. This meant more clusters were assigned to Polynesian populations than should have been (under the K = 6 assumption there would be one cluster per super population), and for six clusters to remain, the \gls{sas} populations ended up combined with the \gls{eur} populations, based on the distance and linkage criteria used for the clustering.
 
 <!-- Were the regions driving similarity of amr and nzm shared with the europeans? -->
 
@@ -2401,9 +2403,9 @@ Grouping based on the clustering of the significant results in \gls{ihs} or \gls
 
 It can be concluded that the extremes of the distributions for the intra-population selection and neutrality statistics can be used to group populations into their super populations. There was similarity in the regions in the extremes of the selection and neutrality statistics for the populations of a super population, but limited commonality in the extreme regions between super populations. Random regions of the genome had varying levels of commonality between populations but was lower than the regions with extreme selection and neutrality statistic values.
 
-Genes that are associated with disease performed well at grouping populations into their super population groups with hierarchical clustering. However, this was not specific to metabolic disease associated genes, but applied to random sets of genes, with an increase in number of genes improving the clustering. Showing that there was not specificity to the loci used, and instead due to allele frequency similarities between populations.
+Genes that are associated with disease performed well at grouping populations into their super population groups with hierarchical clustering. However, this was not specific to metabolic disease associated genes, but applied to random sets of genes, with an increase in number of genes improving the clustering. This suggests the result was not specific to the loci used, and instead was due to allele frequency similarities between populations.
 
-In all combinations of clustering of selection and neutrality statistics used, the East Asian populations were the most similar to the Polynesian populations. There was additional evidence of the differences and similarities of the Polynesian populations, between the Eastern and Western Polynesian's, which reflected the migration history. And there was evidence of regions having a shared ancestry between these populations, along with evidence of a common ancestral population with the modern East Asian populations.
+In all combinations of clustering of selection and neutrality statistics used, the East Asian populations were the most similar to the Polynesian populations. There was additional evidence of the differences and similarities of the Polynesian populations, between the Eastern and Western Polynesian's, which reflected the migration history . And there was evidence of regions having a shared ancestry between these populations, along with evidence of a common ancestral population with the modern East Asian populations.
 
 Due to the limitations of the source dataset, additional analysis using whole genome sequence data would be beneficial.
 
